<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:orientation="vertical">
	
	<ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
		<RelativeLayout android:layout_width="match_parent"
				android:layout_height="match_parent" android:orientation="vertical">
		    
			<TextView android:text="@string/artifact_title" style="@style/Title"
					android:id="@+id/art_title" android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
			
			<ImageView android:id="@+id/art_image" android:layout_width="fill_parent"
					android:layout_gravity="center" android:layout_height="wrap_content"
					android:scaleType="centerInside" android:layout_below="@id/art_title"
					android:padding="15sp" android:maxHeight="150sp"/>
			
			<TextView android:id="@+id/art_medialink"
                style="@style/Link"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/art_image"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="15sp"
                android:text="@string/view_video" />

			<TextView android:text="@string/author" style="@style/Subtitle"
					android:id="@+id/art_author" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:layout_below="@id/art_medialink"/>
		
			<TextView android:text="@string/creation_year" style="@style/Subtitle"
					android:paddingLeft="5dp" android:id="@+id/art_year"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_below="@id/art_author" />		
			
			<TextView android:text="@string/more" android:gravity="right"
					android:layout_gravity="right" style="@style/Link" android:id="@+id/art_more"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_below="@id/art_medialink" android:layout_alignParentRight="true"/>
					
			<TextView android:id="@+id/art_location" style="@style/Subtitle"
					android:text="@string/location" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:layout_below="@id/art_year"/>
					
			<View style="@style/Line" android:layout_below="@id/art_location" android:id="@+id/lijn"/>
			
			<TextView android:layout_weight="1" android:text="@string/artifact_info"
					android:id="@+id/art_info" android:inputType="textMultiLine" style="@style/Body"
					android:padding="20dp" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:layout_below="@id/lijn"/>
			
		</RelativeLayout>
	</ScrollView>

</LinearLayout>
